# AEIporter

./: README.md  requirements.txt  setup.cfg
.github/workflows/: testing.yml
AEIporter/: AEIporter.py  __init__.py
source/: AEIporter.py  __init__.py
