[metadata]
name = pyshortcuts
version = attr: AEIporter.__version__

description = Smart tool for converting Abyss Engine Images to PNG or to AEI or AEI to PNG
long_description = file: README.md
long_description_content_type = text/markdown

author = BaalNetbek
author_email = 157546829+BaalNetbek@users.noreply.github.com

url = https://github.com/BaalNetbek/AEIporter

license = GPL License
platforms = any
version  = 0.0.1
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GPL License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy

project_urls =
    Source = https://github.com/BaalNetbek/AEIporter
    Documentation = https://github.com/BaalNetbek/AEIporter/README.md
    Tracker = https://github.com/BaalNetbek/AEIporter/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    aepi
    PyQt6
    pillow

[options.entry_points]
console_scripts =
    pyshortcut = AEIporter:aeiporter_cli
